Fixed - burger navigation issue on mobile version

--- a/style.scss
+++ b/style.scss
@@ -224,7 +224,7 @@ footer {
       position: absolute;
       right: 0px;
       height: 100vh;
-      top: 5vh;
+      top: 10vh;
       background-color: #181719;
       z-index: 1;
       display: flex;
